populate possible job_types in OpenAPI spec dynamically

--- a/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
+++ b/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
@@ -51,7 +51,7 @@ paths:
         - name: job_type
           in: query
           schema:
-            $ref: "#/components/schemas/job_type"
+            $ref: "./job_parameters.yml#/components/schemas/job_type"
         - name: start_token
           in: query
           schema:
@@ -184,7 +184,7 @@ components:
 
       properties:
         job_type:
-          $ref: "#/components/schemas/job_type"
+          $ref: "./job_parameters.yml#/components/schemas/job_type"
         job_parameters:
           $ref: "./job_parameters.yml#components/schemas/job_parameters"
         name:
@@ -212,7 +212,7 @@ components:
         user_id:
           $ref: "#/components/schemas/user_id"
         job_type:
-          $ref: "#/components/schemas/job_type"
+          $ref: "./job_parameters.yml#/components/schemas/job_type"
         job_parameters:
           $ref: "./job_parameters.yml#components/schemas/job_parameters"
         request_time:
@@ -246,15 +246,6 @@ components:
       description: Username from Earthdata Login.
       type: string
       example: myUserId
-
-    job_type:
-      description: Type of process to run this job.
-      type: string
-      example: RTC_GAMMA
-      enum:
-        - RTC_GAMMA
-        - INSAR_GAMMA
-        - AUTORIFT
 
     datetime:
       description: Date and time object formatted according to ISO 8601
