add some tests for process_new_granuels.py

--- a/.github/actions/deploy-hyp3/action.yml
+++ b/.github/actions/deploy-hyp3/action.yml
@@ -48,7 +48,7 @@ runs:
           python apps/render_cf.py --job-types-file job_types.yml
           pip install -r apps/api/requirements-api.txt -t apps/api/src
           pip install -r apps/process-new-granules/requirements-process-new-granules.txt -t apps/process-new-granules/src
-
+          pip install -r apps/update-db/update-db-requirements.txt -t apps/update-db/src
       - name: Package and deploy
         shell: bash
         run: |
