--- a/apps/main-cf.yml
+++ b/apps/main-cf.yml
@@ -228,4 +228,4 @@ Resources:
             - AttributeName: user_id
               KeyType: HASH
           Projection:
-            ProjectionType: all
+            ProjectionType: ALL
