--- a/apps/main-cf.yml
+++ b/apps/main-cf.yml
@@ -89,6 +89,16 @@ Resources:
         ContentBucket: !Ref ContentBucket
       TemplateURL: compute-cf.yml
 
+  ProcessNewGranules:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      Parameters:
+        VpcId: !Ref VpcId
+        SubnetIds: !Join [',', !Ref SubnetIds]
+        ContentBucket: !Ref ContentBucket
+      TemplateURL: process-new-granules/process-new-granules-cf.yml
+
+
   StepFunction:
     Type: AWS::CloudFormation::Stack
     Properties:
