pin versions for more performant pip installs

--- a/apps/api/requirements-api.txt
+++ b/apps/api/requirements-api.txt
@@ -1,10 +1,10 @@
-cryptography
-flask
-Flask-Cors
-openapi-core
-prance
-PyJWT
-requests
-serverless_wsgi>=1.7.8
-shapely
-strict-rfc3339
+cryptography==3.4.7
+flask==1.1.4
+Flask-Cors==3.0.10
+openapi-core==0.14.2
+prance==0.21.2
+PyJWT==2.1.0
+requests==2.26.0
+serverless_wsgi==1.7.8
+shapely==1.7.1
+strict-rfc3339==0.7
