--- a/requirements-all.txt
+++ b/requirements-all.txt
@@ -1,7 +1,7 @@
 -r apps/api/requirements-api.txt
-boto3
-jinja2
+boto3==1.18.7
+jinja2==2.11.3
 moto==1.3.14
-pytest
-PyYAML
-responses
+pytest==6.2.4
+PyYAML==5.4.1
+responses==0.13.3
