--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,6 +11,7 @@ updates:
       interval: "daily"
     ignore:
       - dependency-name: "moto"
+      - dependency-name: "Jinja2"
   - package-ecosystem: "pip"
     directory: "/apps/api/"
     schedule:
