--- a/job_types.yml
+++ b/job_types.yml
@@ -153,7 +153,7 @@ Autorift:
     - --bucket-prefix
     - Ref::bucket_prefix
     - --naming-scheme
-    - !ENV ${AUTORIFT_NAMING_SHEME:ITS_LIVE_OD}
+    - !ENV ${AUTORIFT_NAMING_SCHEME:ITS_LIVE_OD}
     - Ref::granules
   validators: []
   timeout: 10800
