--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,7 @@ jobs:
             image_tag: latest
             quota: 1000
             deploy_ref: refs/heads/main
+            autorift_naming_scheme: ITS_LIVE_OD
 
           - environment: hyp3-test
             domain: hyp3-test-api.asf.alaska.edu
@@ -25,6 +26,7 @@ jobs:
             image_tag: test
             quota: 1000
             deploy_ref: refs/heads/develop
+            autorift_naming_scheme: ITS_LIVE_OD
 
           - environment: hyp3-autorift
             domain: hyp3-autorift.asf.alaska.edu
@@ -32,6 +34,7 @@ jobs:
             image_tag: latest
             quota: 0
             deploy_ref: refs/heads/main
+            autorift_naming_scheme: ITS_LIVE_PROD
 
     environment:
       name: ${{ matrix.environment }}
@@ -64,6 +67,7 @@ jobs:
           EDL_PASSWORD: ${{ secrets.EDL_PASSWORD }}
           CLOUDFORMATION_ROLE_ARN: ${{ secrets.CLOUDFORMATION_ROLE_ARN }}
           MONTHLY_JOB_QUOTA_PER_USER: ${{ matrix.quota }}
+          AUTORIFT_NAMING_SCHEME: ${{ matrix.autorift_naming_scheme }}
 
   tag:
     runs-on: ubuntu-latest
