--- a/apps/main-cf.yml
+++ b/apps/main-cf.yml
@@ -59,6 +59,7 @@ Parameters:
       - true
 
   AutoriftNamingScheme:
+    Description: Naming scheme for autoRIFT products, On Demand (ITS_LIVE_OD) or Production (ITS_LIVE_PROD)
     Type: String
     Default: ITS_LIVE_OD
     AllowedValues:
