api shouldn't allow additional properties on search

--- a/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
+++ b/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
@@ -263,7 +263,7 @@ components:
 
     search_parameters:
       description: parameters used to find data from the ASF Search API
-      additionalProperties: true
+      additionalProperties: false
       type: object
       required:
         - start
