fix environment variable name

--- a/apps/update-db/update-db-cf.yml
+++ b/apps/update-db/update-db-cf.yml
@@ -47,7 +47,7 @@ Resources:
     Properties:
       Environment:
         Variables:
-          TABLE_NAME: !Ref JobsTable
+          JOBS_TABLE_NAME: !Ref JobsTable
       Code: src/
       Handler: main.lambda_handler
       MemorySize: 128
