--- a/.github/actions/deploy-hyp3/action.yml
+++ b/.github/actions/deploy-hyp3/action.yml
@@ -51,7 +51,7 @@ runs:
           pip install -r requirements-all.txt
           python apps/render_cf.py --job-types-file job_types.yml
           pip install -r apps/api/requirements-api.txt -t apps/api/src
-
+          pip install -r apps/update-db/update-db-requirements.txt -t apps/update-db/src
       - name: Package and deploy
         shell: bash
         run: |
