migrate start_execution.get_pending_jobs to dynamo.jobs.get_jobs_by_status_code

--- a/.github/actions/deploy-hyp3/action.yml
+++ b/.github/actions/deploy-hyp3/action.yml
@@ -52,6 +52,7 @@ runs:
           python apps/render_cf.py --job-types-file job_types.yml
           pip install -r apps/api/requirements-api.txt -t apps/api/src
           pip install -r apps/update-db/update-db-requirements.txt -t apps/update-db/src
+          pip install -r apps/start-execution/start-execution-requirements.txt -t apps/start-execution/src
       - name: Package and deploy
         shell: bash
         run: |
