fix typo in api spec, fix failing tests

--- a/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
+++ b/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
@@ -307,7 +307,7 @@ components:
             type: integer
             minimum: 1
             maximum: 175
-        polorization:
+        polarization:
           type: array
           minItems: 1
           items:
