--- a/apps/process-new-granules/process-new-granules-cf.yml
+++ b/apps/process-new-granules/process-new-granules-cf.yml
@@ -76,7 +76,7 @@ Resources:
   Schedule:
     Type: AWS::Events::Rule
     Properties:
-      ScheduleExpression: "rate(1 minute)"
+      ScheduleExpression: "rate(1 hour)"
       Targets:
         - Arn: !GetAtt Lambda.Arn
           Id: lambda
