--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,14 +11,29 @@ jobs:
     strategy:
       matrix:
         include:
-          - environment: hyp3-subscriptions
-            domain: hyp3-subscriptions.asf.alaska.edu
+          - environment: hyp3
+            domain: hyp3-api.asf.alaska.edu
             template_bucket: cf-templates-aubvn3i9olmk-us-west-2
             image_tag: latest
-            quota: 0
-            deploy_ref: refs/heads/subscriptions
+            quota: 1000
+            deploy_ref: refs/heads/main
             autorift_naming_scheme: ITS_LIVE_OD
 
+          - environment: hyp3-test
+            domain: hyp3-test-api.asf.alaska.edu
+            template_bucket: cf-templates-aubvn3i9olmk-us-west-2
+            image_tag: test
+            quota: 1000
+            deploy_ref: refs/heads/develop
+            autorift_naming_scheme: ITS_LIVE_OD
+
+          - environment: hyp3-autorift
+            domain: hyp3-autorift.asf.alaska.edu
+            template_bucket: cf-templates-igavixdzdy7k-us-west-2
+            image_tag: latest
+            quota: 0
+            deploy_ref: refs/heads/main
+            autorift_naming_scheme: ITS_LIVE_PROD
 
     environment:
       name: ${{ matrix.environment }}
