update subscriptions in openapi to allow editing the end date

--- a/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
+++ b/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
@@ -116,9 +116,32 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/subscriptions_response"
+                type: object
+                required:
+                  - subscriptions
+                properties:
+                  subscriptions:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/subscriptions_response"
+    patch:
+      description: Change information about the given subscription
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type:
+                array
+              items:
+                $ref: '#/components/schemas/subscriptions_update_expression'
+        required: true
+      responses:
+        "200":
+          description: 200 response
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/subscriptions_response"
 
 components:
   schemas:
@@ -150,7 +173,7 @@ components:
           $ref: "#/components/schemas/next_url"
 
     subscriptions_body:
-      description: foo
+      description: Information about a subscription
       type: object
       required:
         - search_parameters
@@ -160,6 +183,17 @@ components:
           $ref: "#/components/schemas/search_parameters"
         job_specification:
           $ref: "#components/schemas/subscription_job_specification"
+
+    subscriptions_update_expression:
+      description: Change/update a subscription
+      type: object
+      required:
+        - subscription_id
+      properties:
+        subscription_id:
+          $ref: "#/components/schemas/job_or_subscription_id"
+        end:
+          $ref: "#/components/schemas/datetime"
 
     subscriptions_response:
       type: array
