--- a/apps/main-cf.yml
+++ b/apps/main-cf.yml
@@ -156,6 +156,13 @@ Resources:
           - Status: Enabled
             AbortIncompleteMultipartUpload:
               DaysAfterInitiation: 1
+      CorsConfiguration:
+        CorsRules:
+          - AllowedMethods:
+              - GET
+              - HEAD
+            AllowedOrigins:
+              - "*.asf.alaska.edu"
 
   BucketPolicy:
     Type: AWS::S3::BucketPolicy
