refactor to use put_subscription instead of requireing an update function

--- a/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
+++ b/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
@@ -191,6 +191,8 @@ components:
     subscriptions_update_expression:
       description: Change/update a subscription
       type: object
+      required:
+        - end
       properties:
         end:
           $ref: "#/components/schemas/datetime"
