--- a/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
+++ b/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
@@ -107,7 +107,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/subscriptions_response"
+                $ref: "#/components/schemas/subscription"
     get:
       description: Get information about subscriptions for the logged in user
       responses:
@@ -121,9 +121,7 @@ paths:
                   - subscriptions
                 properties:
                   subscriptions:
-                    type: array
-                    items:
-                      $ref: "#/components/schemas/subscriptions_response"
+                    $ref: "#/components/schemas/list_of_subscriptions"
   /subscriptions/{subscription_id}:
     patch:
       description: Change information about the given subscription
@@ -145,7 +143,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/subscriptions_response"
+                $ref: "#/components/schemas/subscription"
     get:
       description: Get information about a specific subscription
       parameters:
@@ -160,7 +158,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/subscriptions_response"
+                $ref: "#/components/schemas/subscription"
 
 components:
   schemas:
@@ -214,7 +212,7 @@ components:
         end:
           $ref: "#/components/schemas/datetime"
 
-    subscriptions_response:
+    list_of_subscriptions:
       type: array
       items:
         $ref: "#/components/schemas/subscription"
