add subscription_id to jobs created by subscriptions

--- a/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
+++ b/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
@@ -398,6 +398,8 @@ components:
       properties:
         job_id:
           $ref: "#/components/schemas/job_or_subscription_id"
+        subscription_id:
+          $ref: "#/components/schemas/job_or_subscription_id"
         user_id:
           $ref: "#/components/schemas/user_id"
         job_type:
