allow get /jobs to query on subscription_id

--- a/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
+++ b/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
@@ -54,6 +54,10 @@ paths:
           in: query
           schema:
             $ref: "#/components/schemas/start_token"
+        - name: subscription_id
+          in: query
+          schema:
+            $ref: "#/components/schemas/job_or_subscription_id"
 
       responses:
         "200":
