--- a/apps/process-new-granules/process-new-granules-cf.yml
+++ b/apps/process-new-granules/process-new-granules-cf.yml
@@ -79,7 +79,7 @@ Resources:
   Schedule:
     Type: AWS::Events::Rule
     Properties:
-      ScheduleExpression: "rate(1 hour)"
+      ScheduleExpression: "rate(20 minutes)"
       Targets:
         - Arn: !GetAtt Lambda.Arn
           Id: lambda
