add validate_only option to POST /subscriptions

--- a/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
+++ b/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
@@ -201,6 +201,8 @@ components:
         - job_specification
       additionalProperties: false
       properties:
+        validate_only:
+          $ref: "#/components/schemas/validate_only"
         search_parameters:
           $ref: "#/components/schemas/search_parameters"
         job_specification:
