add creation_date to subscriptions

--- a/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
+++ b/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
@@ -256,6 +256,8 @@ components:
           $ref: "#components/schemas/subscription_job_specification"
         user_id:
           $ref: "#/components/schemas/user_id"
+        creation_date:
+          $ref: "#/components/schemas/datetime"
         enabled:
           $ref: "#/components/schemas/subscription_enabled"
 
